# filmdiary

./: .gitignore  README.md  film_database.db  libraryImplementation.py  package-lock.json  package.json  setup.cfg  test_film_database.db
FilmDiary/: README.md  jest.config.cjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  vue.config.js
FilmDiary/src/: App.vue  main.ts
FilmDiary/src/components/: EntryField.vue  FilmGallery.vue  IconNav.vue  Navbar.vue
FilmDiary/src/router/: index.ts
FilmDiary/src/tests/: Watched.test.js  setup.js
FilmDiary/src/views/: HomeView.vue  Watched.vue
src/FilmDiary.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/filmdiary/: __init__.py  filmapi.py  main.py
src/filmdiary/api/: api.py  crud.py  film_database.db  model.py  model_types.py
tests/: test_api_003.py  test_crud_001.py
