[metadata]
name = FilmDiary
author = Jan Wimmer
description = "This is a tool to log your watched movies."
version = 1.0.0

[options]
python_requires >= 3.8
package_dir =
        =src
packages = find:
zip_safe = False
install_requires = 
    sqlalchemy
    pytest
    tmdbv3api
    nodejs
    fastapi
    uvicorn
    npm

[options.extras_require]
dev = 
  black
  pytest
  rope
  flake8
  flake8-eradicate
  flake8-isort
  flake8-spellcheck
  flake8-variables-names
  flake8-builtins
  ipython

[flake8]
max-line-length=88
exclude = venv
docstring-convention = numpy
dictionaries = en_US,python,technical

[isort]
profile = black

[tool:pytest]
testpaths = tests
log_level = info